views: Add notes to patch-detail view
The submission template now includes a section to display notes, these
can be filtered out depending if the request user is a maintainer for
the patch's project and on the note maintainer_only attribute

Signed-off-by: andrepapoti <andrepapoti@gmail.com>

--- a/patchwork/templates/patchwork/partials/patch-forms.html
+++ b/patchwork/templates/patchwork/partials/patch-forms.html
@@ -44,6 +44,13 @@
       </button>
     </div>
     {% endif %}
+    {% if is_maintainer %}
+    <div id="create-note">
+      <button class="patch-form-submit btn btn-primary" name="action" value="Add-Note">
+        Add Note
+      </button>
+    </div>
+    {% endif %}
   </div>
 {% endif %}
 </div>
