views: add series-list view
This view is meant to give a quickoverview on a project since some of
them can have hundreds of patches actives.
This view also allows the user to apply changes on all of the series
patches at once

Signed-off-by: andrepapoti <andrepapoti@gmail.com>

--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -407,6 +407,12 @@ span.p_mod    { color: #a020f0; }
     font-weight: bold;
 }
 
+/* series */
+a.series-list-header {
+    color: inherit;  /* Inherit color from parent element */
+    text-decoration: none; /* Optional: removes underline */
+}
+
 /* bundles */
 table.bundlelist {
     margin-top: 2em;
