--- a/patchwork/templates/patchwork/series-list.html
+++ b/patchwork/templates/patchwork/series-list.html
@@ -75,7 +75,9 @@
       </td>
 {% endif %}
       <td>
+        <a href="{% url 'series-detail' project_id=project.linkname series_id=series.id %}?state=*">
           {{ series.name|default:"[no subject]"|truncatechars:100 }}
+        </a>
       </td>
       <td>
         {{ series.version|default:"-"}}
